# diplom-rag

./: .gitignore  README.md  license  project_structure.txt  pyproject.toml
configs/prompts/: rag_force_citations.txt  rag_system.txt
data/corpus/: sources.jsonl
data/evaluation/questions_gold/: gold_questions_v3_pilot27_strict.jsonl  gold_questions_v3_pilot27_strict.pretty.json  gold_questions_v3_pilot27_strict_README.md
data/evaluation/runs/: baseline_naive_rag_gold_questions_v2_pilot27_20260403_110850.csv  baseline_naive_rag_gold_questions_v2_pilot27_20260403_110850.jsonl  baseline_naive_rag_gold_questions_v2_pilot27_20260403_110850.summary.json  baseline_naive_rag_gold_questions_v2_pilot27_20260403_113333.csv  baseline_naive_rag_gold_questions_v2_pilot27_20260403_113333.jsonl  baseline_naive_rag_gold_questions_v2_pilot27_20260403_113333.md  baseline_naive_rag_gold_questions_v2_pilot27_20260403_113333.summary.json  baseline_naive_rag_gold_questions_v3_pilot27.csv  (+115 more)
data/manual_runs/: answers.jsonl  search.jsonl
docker/: docker-compose.yml
reports/: rag_compare_gold_questions_v3_pilot27.xlsx
reports/pdf_checks/: pdf_check_report.csv  pdf_page_samples_report.txt  pdf_preprocess_headers_report.txt  pdf_preprocess_report.csv
scripts/: analyze_baseline_run.py  chunk_page_texts.py  eval_baseline.py  preprocess_pdf_pages.py
scripts/graph/: build_chunk_graph.py  eval_graph.py
scripts/hybrid/: eval_hybrid.py
scripts/pdf_checks/: check_pdf_quality.py  check_pdf_samples.py
src/: settings.py
src/rag/: rag_settings.py
src/storage/: source_links.py
(+42 files in other folders)
