[project]
name = "diplom-rag"
version = "0.1.0"
description = "CLI-first RAG (naive/hybrid/agentic) with Qdrant + MinIO + LM Studio"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",

  "qdrant-client>=1.8.0",
  "boto3>=1.34.0",

  "httpx>=0.27.0",
  "rich>=13.7.0",
  "pypdf>=4.2.0",
  "aiogram>=3.10.0",
]

[tool.ruff]
line-length = 100
